[gd_scene load_steps=4 format=3 uid="uid://drakelord_player"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_player"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(40, 60)

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(0.294118, 0.623529, 1, 1, 0.419608, 0.713726, 1, 1)

[node name="Drakelord" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_player")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.294118, 0.623529, 1, 1)
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -80.0
offset_right = 50.0
offset_bottom = -20.0

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
max_value = 150.0
value = 150.0

[node name="LevelLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = -15.0
text = "Lv. 1"
horizontal_alignment = 1

[node name="AbilityCooldowns" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 15.0
offset_right = 60.0
offset_bottom = 35.0

[node name="DragonBreathCD" type="Label" parent="UI/AbilityCooldowns"]
layout_mode = 2
text = "Q: Ready"
modulate = Color(0, 1, 0, 1)

[node name="WingBurstCD" type="Label" parent="UI/AbilityCooldowns"]
layout_mode = 2
text = "Shift: Ready"
modulate = Color(0, 1, 0, 1)

[node name="AncientRageCD" type="Label" parent="UI/AbilityCooldowns"]
layout_mode = 2
text = "R: Ready"
modulate = Color(0, 1, 0, 1)